
    Updated the Logtalk compiler in order to reject use_module/2 directives
    where the first argument is not an atom (assumed to be the module name).
    This change results in using the config files to find the module name from
    the module file name when the first argument of the use_module/2 directive
    is a compound term (as usual when using library notation).

    Added support for the predicate renaming operator as/2 found on SWI-Prolog
    and YAP when parsing use_module/2 directives.

    Updated the SWI-Prolog hooks file, "configs/swihook.pl", in order to avoid
    intercepting Prolog ensure_loaded/1 calls by the prolog_load_file/2 hook
    predicate. This change solves issues when calling Prolog module library
    predicates from within Logtalk objects and categories. Thanks to Parker
    Jones for the bug report.

    Updated the ECLiPSe, SICStus Prolog, SWI-Prolog, and YAP config files in
    order to preprocess the use_module/2 directive, converting the module file
    name into the module name.

    Updated the SWI-Prolog and YAP config files in order to preprocess the
    reexport/2 module directive, converting the module file name into the
    module name.

    Updated the SWI-Prolog config file with more robust and fast code for
    preprocessing module directives when the modules are already loaded.

    Updated the YAP config file in order to use the more standard predicate
    working_directory/2.

    Added support for parsing use_module/3 directives to the SICStus Prolog
    config files. Improved finding the module name from the module file name
    when preprocessing the directives use_module/1-2.

    Updated the Qu-Prolog integration script, "qplgt.sh", in order to use
    larger memory values for the code and environment areas.

    Replaced the predicate as_dictionary/2 in the library object "bintree"
    with a new implementation, contributed by Paul Fodor, that returns a
    semi-balanced tree.
