@@ -33,6 +33,9 @@ RELEASE NOTES
     the module file name when the first argument of the use_module/2 directive
     is a compound term (as usual when using library notation).
 
+    Optimized meta-calls when using closures wrapped in the {}/1 control
+    construct.
+
     Added support for the predicate renaming operator as/2 found on SWI-Prolog
     and YAP when parsing use_module/2 directives.
 
